Closed Bug 1543693 Opened 5 years ago Closed 5 years ago

nsReadableUtils is missing XPCOM string conversions between UTF-8 and Latin1

Categories

(Core :: XPCOM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox68 --- fixed

People

(Reporter: hsivonen, Assigned: hsivonen)

References

Details

Attachments

(1 file)

The FFI bits are there, like nscstring_fallible_append_latin1_to_utf8_check, but the wrapper functions are missing!

Pushed by hsivonen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/7ba85ea07d28
Add missing nsReadableUtils wrappers for conversions between UTF-8 and Latin1 XPCOM string. r=froydnj
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
Component: String → XPCOM
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: