Bug 1543693 - Add missing nsReadableUtils wrappers for conversions between UTF-8 and Latin1 XPCOM string. r=froydnj

Differential Revision: https://phabricator.services.mozilla.com/D27234